--- a/shopping.html
+++ b/shopping.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html ng-app='shop'>
 <head>
 	<title>Your Shopping Cart</title>
 </head>
 <body ng-controller='CartController'>
-	<h1>Your Order</h1>
+	<h1>Your Order {{header}}</h1>
 	<div>
 		<table width="500">
 			<thead>
@@ -18,13 +19,17 @@
 			</thead>
 			<tbody ng-repeat='item in items'>
 				<td>{{$index}}</td>
-				<td>{{item.title}}</td>
+				<td>{{item.title | uppercase}}</td>
 				<td><input ng-model='item.quantity' size="5"></td>
 				<td>{{item.price | currency}}</td>
 				<td>{{item.price * item.quantity | currency}}</td>
 				<td><button ng-click="remove($index)">X</button></td>
 			</tbody>
 		</table>
+		<button ng-click="removeAll()">Remove All</button>
+		<p>{{someText + addText + " " + moreText}}</p>
+		<p><input ng-model="addText"></p>
+		<p>Are you awesome? <input type="checkbox" ng-model="awesome" ng-change="isAwesome()"></p>
 	</div>
 	<script src="js/angular.js"></script>
 	<script src="js/shop.js"></script>
